--- a/templates/footer.twig
+++ b/templates/footer.twig
@@ -49,6 +49,10 @@
             title="Pixel perfect"
             >Pixel perfect</a
         >
+        ,
+        <a href="https://www.flaticon.com/authors/freepik" title="Freepik"
+            >Freepik</a
+        >
         from
         <a href="https://www.flaticon.com/" title="Flaticon"
             >www.flaticon.com</a
