--- a/web/styles/footer.css
+++ b/web/styles/footer.css
@@ -7,3 +7,16 @@ footer img {
     width: 30px;
     height: 30px;
 }
+
+footer p {
+    color: #000;
+}
+
+footer div.ref {
+    color: #000;
+}
+
+footer a {
+    color: #fff;
+    font-family: Arial, Helvetica, sans-serif;
+}
