--- a/templates/index.twig
+++ b/templates/index.twig
@@ -17,130 +17,79 @@
             rel="stylesheet"
             href="https://unpkg.com/flickity@2/dist/flickity.min.css"
         />
-        <link rel="stylesheet" type="text/css" href="styles/index.css" />
-        <link rel="stylesheet" type="text/css" href="styles/footer.css" />
-        <title>Inicio</title>
+        <link rel="stylesheet" type="text/css" href="/styles/navbar.css" />
+        <link rel="stylesheet" type="text/css" href="/styles/index.css" />
+        <link rel="stylesheet" type="text/css" href="/styles/footer.css" />
+
+        {% set title = entry.title %}
+        <title>
+            {% if title is defined %}{{ title }} - {% endif %}{{ siteName }}
+        </title>
+        <link rel="icon" type="image/png" href="/resources/favicon.png" />
     </head>
     <body>
-        {% include "navbar.twig" %} {% set asset = entry.homeimage.one() %}
+        <body>
+            {% include "navbar.twig" %} {% set asset = entry.homeimage.one() %}
 
-        <div class="welcome">
-            <img
-                class="home-image img-fluid mx-auto d-block"
-                src="{{ asset.getUrl() }}"
-                alt=""
-            />
+            <div class="welcome">
+                <img
+                    class="home-image img-fluid mx-auto d-block"
+                    src="{{ asset.getUrl() }}"
+                    alt=""
+                />
 
-            <div class="container col-12 px-md-0 px-0">
-                <div class="text text-center pb-2 mx-auto col-lg-6 col-md-12 ">
-                    <h1 class="pt-3 mb-3">
-                        <b>{{ entry.welcomeTitle }}</b>
-                    </h1>
-                    <p>
-                        {{ entry.welcomeMessage }}
-                    </p>
-                    <a href="">
-                        <button type="button" class="btn btn-primary">
-                            Ver más
-                        </button>
-                    </a>
-                </div>
-            </div>
-        </div>
-
-        <h2 class="mt-4 ml-5 pl-5">Próximos eventos</h2>
-        <div class="container justify-content-center">
-            <div
-                class="carousel mt-3 mb-5"
-                data-flickity='{ "cellAlign": "center" }'
-            >
-                {% set start = now|atom %} {% set eventEntries =
-                craft.entries.section('eventos').eventDate(">= #{start}").all()
-                %} {% if not eventEntries|length %}
-                <div class="carousel-cell col-lg-5 col-10">
-                    <div class="card">
-                        <img
-                            class="card-img-top no-events-img mx-auto"
-                            src="/resources/archery.png"
-                            alt=""
-                        />
-                        <div class="card-body">
-                            <h5 class="card-title">
-                                Aún estamos armando las pacas
-                            </h5>
-                            <p class="card-text">
-                                Vuelve pronto para conocer sobre nuestras
-                                próximas actividades.
-                            </p>
-                        </div>
+                <div class="container col-12 px-md-0 px-0">
+                    <div
+                        class="text text-center pb-2 mx-auto col-lg-6 col-md-12 "
+                    >
+                        <h1 class="pt-3 mb-3">
+                            <b>{{ entry.welcomeTitle }}</b>
+                        </h1>
+                        <p>
+                            {{ entry.welcomeMessage }}
+                        </p>
+                        <a href="">
+                            <button type="button" class="btn btn-primary">
+                                Ver más
+                            </button>
+                        </a>
                     </div>
                 </div>
-                {% else %} {% for entry in eventEntries %}
-                <div class="carousel-cell col-lg-5 col-md-10">
-                    <div class="card">
-                        {% if entry.eventImage|length %}
-                        <img
-                            src="{{ entry.eventImage.one().getUrl() }}"
-                            class="card-img-top"
-                            alt="..."
-                        />
-                        {% endif %}
-                        <div class="card-body">
-                            <h5 class="card-title">{{ entry.title }}</h5>
-                            <p class="card-text">
-                                {{ entry.eventDescription }}
-                            </p>
-                            {#
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
-                            #}
-                        </div>
-                        <div class="card-footer">
-                            <div class="container ">
-                                <div class="row justify-content-between">
-                                    <div class="col-7 ml-0 pl-0">
-                                        <div class="row justify-content-start">
-                                            <div class="col-1">
-                                                <img
-                                                    class="card-footer-img"
-                                                    src="/resources/placeholder.png"
-                                                    alt=""
-                                                />
-                                            </div>
-                                            <div
-                                                class="card-footer-text col-10 pl-0"
-                                            >
-                                                {{ entry.eventLocation }}
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-5 mr-0 pr-0">
-                                        <div class="row justify-content-end">
-                                            {% if entry.eventDate %}
+            </div>
 
-                                            <div class="col-1">
-                                                <img
-                                                    class="card-footer-img"
-                                                    src="/resources/calendar.png"
-                                                    alt=""
-                                                />
-                                            </div>
-                                            <div
-                                                class="card-footer-text col-auto pl-0"
-                                            >
-                                                {{ entry.eventDate |date('medium', locale='es')}}
-                                            </div>
-                                            {% endif %}
-                                        </div>
-                                    </div>
-                                </div>
+            <h2 class="mt-4 ml-5 pl-5">Próximos eventos</h2>
+            <div class="container justify-content-center">
+                <div
+                    class="carousel mt-3 mb-5"
+                    data-flickity='{ "cellAlign": "center" }'
+                >
+                    {% set start = now|atom %} {% set eventEntries =
+                    craft.entries.section('eventos').eventDate(">=
+                    #{start}").all() %} {% if not eventEntries|length %}
+                    <div class="carousel-cell col-lg-5 col-10">
+                        <div class="card">
+                            <img
+                                class="card-img-top no-events-img mx-auto"
+                                src="/resources/archery.png"
+                                alt=""
+                            />
+                            <div class="card-body">
+                                <h5 class="card-title">
+                                    Aún estamos armando las pacas
+                                </h5>
+                                <p class="card-text">
+                                    Vuelve pronto para conocer sobre nuestras
+                                    próximas actividades.
+                                </p>
                             </div>
                         </div>
                     </div>
+                    {% else %} {% for entry in eventEntries %} {% include
+                    "_modules/carousel.twig" %} {% endfor %} {% endif %}
                 </div>
-                {% endfor %} {% endif %}
             </div>
-        </div>
 
-        {% include 'footer.twig' %}
+            {% include 'footer.twig' %}
+        </body>
     </body>
 </html>
