--- a/templates/navbar.twig
+++ b/templates/navbar.twig
@@ -1,72 +1,53 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta
-            name="viewport"
-            content="width=device-width, initial-scale=1, shirnk-to-fit=no"
+<nav class="navbar navbar-expand-lg navbar-light bg-light ">
+    <a class="navbar-brand col-lg-2 col-md-3 col-6 px-0" href="/">
+        <img
+            class="col-12 px-0 d-inline-block align-top"
+            src="/resources/logo.png"
+            alt=""
+            fluid
         />
-        <!-- <meta http-equiv="X-UA-Compatible" content="ie=edge"> -->
-        <link
-            rel="stylesheet"
-            href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-            integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-            crossorigin="anonymous"
-        />
-        <link
-            rel="stylesheet"
-            href="https://unpkg.com/flickity@2/dist/flickity.min.css"
-        />
-        <link rel="stylesheet" type="text/css" href="/styles/index.css" />
-        <link rel="stylesheet" type="text/css" href="/styles/footer.css" />
-        <title>Inicio</title>
-    </head>
-    <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light ">
-            <a class="navbar-brand col-lg-2 col-md-3 col-6 px-0" href="/">
-                <img
-                    class="col-12 px-0 d-inline-block align-top"
-                    src="/resources/logo.png"
-                    alt=""
-                    fluid
-                />
-            </a>
-            <button
-                class="navbar-toggler"
-                type="button"
-                data-toggle="collapse"
-                data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent"
-                aria-expanded="false"
-                aria-label="Toggle navigation"
-            >
-                <span class="navbar-toggler-icon"></span>
-            </button>
+    </a>
+    <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+    >
+        <span class="navbar-toggler-icon"></span>
+    </button>
 
-            {% set navPages = craft.entries.section('navbar').all() %}
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ml-auto">
-                    {% nav entry in navPages %}
+    {% set navPages = craft.entries.section('navbar').all() %}
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto">
+            {% nav entry in navPages %}
 
-                    <li class="nav-item dropdown  active">
-                        {% set url = entry.sitePageLink.one() %}
-                        <a
-                            class="nav-link {% if entry.getParent() %} dropdown-item {% endif %} 
+            <li class="nav-item dropdown active">
+                {% set url = entry.sitePageLink.one() %}
+                <a
+                    class="nav-link {% if entry.getParent() %} dropdown-item {% endif %} 
                         {% if entry.hasDescendants() %} dropdown-toggle {% endif %} mr-4"
-                            data-toggle="{% if entry.hasDescendants() %}dropdown {% endif %}"
-                            href="{% if url|length %} {{ url.url }} {% endif %}"
-                        >
-                            {{ entry.title }}
-                        </a>
-                        {% ifchildren %}
-                        <ul class="dropdown-menu dropdown-menu-right">
-                            {% children %}
-                        </ul>
-                        {% endifchildren %}
-                    </li>
-                    {% endnav %}
+                    {%
+                    if
+                    entry.hasDescendants()
+                    %}
+                    data-toggle="dropdown"
+                    {%
+                    endif
+                    %}
+                    href="{% if url|length %} {{ url.url }} {% endif %}"
+                >
+                    {{ entry.title }}
+                </a>
+                {% ifchildren %}
+                <ul class="dropdown-menu dropdown-menu-right">
+                    {% children %}
                 </ul>
-            </div>
-        </nav>
-    </body>
-</html>
+                {% endifchildren %}
+            </li>
+            {% endnav %}
+        </ul>
+    </div>
+</nav>
