Inicio, eventos, informacion y galeria completas

--- a/templates/_modules/eventCarousel.twig
+++ b/templates/_modules/eventCarousel.twig
@@ -24,7 +24,7 @@
                             <div class="col-1">
                                 <img
                                     class="card-footer-img"
-                                    src="/resources/placeholder.png"
+                                    src="/resources/placeholder.svg"
                                     alt=""
                                 />
                             </div>
