Correccion del footer, creacioin de pagina de contacto, falta conectar

--- a/templates/_modules/socialMedia.twig
+++ b/templates/_modules/socialMedia.twig
@@ -1,4 +1,4 @@
 {% set asset = module.image.one() %}
 <a href="{{ module.linkUrl }}">
-    <img src="{{ asset.url }}" alt="{{ module.linkName }}" />
+    <img class="mx-1" src="{{ asset.url }}" alt="{{ module.linkName }}" />
 </a>
