--- a/templates/index.twig
+++ b/templates/index.twig
@@ -50,7 +50,12 @@
                         </p>
                         <a href="">
                             <button type="button" class="btn btn-primary">
-                                Ver más
+                                <a
+                                    class="text-body"
+                                    href="{{ entry.getUrl() }}informacion"
+                                >
+                                    Ver más
+                                </a>
                             </button>
                         </a>
                     </div>
