--- a/web/styles/footer.css
+++ b/web/styles/footer.css
@@ -20,3 +20,9 @@ footer a {
     color: #fff;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+@media only screen and (max-width: 576px) {
+    div.content > p {
+        text-align: right;
+    }
+}
