--- a/templates/contacto.twig
+++ b/templates/contacto.twig
@@ -37,10 +37,32 @@
             </h5>
         </div>
 
+        {% macro errorList(errors) %} {% if errors %}
+        <ul class="errors">
+            {% for error in errors %}
+            <li>{{ error }}</li>
+            {% endfor %}
+        </ul>
+        {% endif %} {% endmacro %} {% from _self import errorList %}
+
         <div class="container col-8 mt-5 pt-2 mb-5">
             <div class="row">
                 <div class="col-8">
-                    <form class="needs-validation" novalidate>
+                    <form
+                        method="post"
+                        action=""
+                        accept-charset="UTF-8"
+                        class="needs-validation"
+                        novalidate
+                    >
+                        {{ csrfInput() }}
+                        <input
+                            type="hidden"
+                            name="action"
+                            value="contact-form/send"
+                        />
+                        {{ redirectInput("/contacto?res=success") }}
+
                         <div class="input-group mb-4">
                             <div class="input-group-prepend">
                                 <span
@@ -52,12 +74,14 @@
                             </div>
 
                             <input
+                                id="from-name"
+                                name="fromName"
                                 type="text"
                                 class="form-control"
                                 placeholder="Nombre completo"
                                 aria-label="Nombre"
                                 aria-describedby="basic-addon1"
-                                required
+                                value="{{ message.fromName ?? '' }}"
                             />
 
                             <div class="invalid-feedback">
@@ -74,12 +98,13 @@
                                 </span>
                             </div>
                             <input
+                                id="from-email"
                                 type="email"
+                                name="fromEmail"
                                 class="form-control"
-                                id="email"
                                 aria-describedby="Correo electronico para respuesta"
                                 placeholder="correo@ejemplo.com"
-                                required
+                                value="{{ message.fromEmail ?? '' }}"
                             />
 
                             <div class="invalid-feedback">
@@ -95,11 +120,13 @@
                                 <span class="input-group-text">Mensaje</span>
                             </div>
                             <textarea
+                                id="message"
+                                name="message"
                                 class="form-control"
                                 aria-label="With textarea"
                                 required
-                            ></textarea>
-
+                                >{{ message.message ?? '' }}</textarea
+                            >
                             <div class="invalid-feedback">
                                 Campo requerido
                             </div>
